fix(tree): alignment of note count badge

--- a/apps/client/src/widgets/note_tree.css
+++ b/apps/client/src/widgets/note_tree.css
@@ -1,17 +1,16 @@
 #left-pane .tree-wrapper {
     .note-indicator-icon.subtree-hidden-badge {
         font-family: inherit !important;
-        margin-inline-start: 0.5em;
+        margin-inline: 0.5em;
+        margin-top: 0.3em;
         background: var(--left-pane-item-action-button-background);
         color: var(--left-pane-item-action-button-color);
-        padding: 0.2em 0.4em;
+        padding: 0.1em 0.6em;
         border-radius: 0.5em;
         font-size: 0.7rem;
         font-weight: normal;
-        position: absolute;
-        top: 50%;
-        right: 0.6em;
-        transform: translateY(-50%);
+        float: right;
+        vertical-align: middle;
     }
 
     .spotlighted-node {
